--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,10 +20,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:paddingRight="20dp"
             android:paddingLeft="20dp"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <ImageView
@@ -57,6 +58,7 @@
                     android:inputType="number"
                     android:textSize="11dp"
                     android:hint="Mã sinh viên"
+                    android:textColorHint="#C55353"
                     android:paddingLeft="10dp"
                     android:background="@drawable/gray_border"
 
@@ -71,6 +73,7 @@
                     android:inputType="number"
                     android:textSize="11dp"
                     android:hint="Ngày tháng năm sinh ( 30122003 )"
+                    android:textColorHint="#C55353"
                     android:paddingLeft="10dp"
                     android:background="@drawable/gray_border"
                     />
