--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,115 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background"
-    android:gravity="center"
-    tools:context=".MainActivity">
-
-    <androidx.cardview.widget.CardView
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:backgroundTint="@null"
+        tools:context=".MainActivity">
 
+        <FrameLayout
+            android:id="@+id/mainFrame"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            tools:ignore="MissingConstraints">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:paddingRight="20dp"
-            android:paddingLeft="20dp"
-            android:layout_gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView"
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/btnNav"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/logo_main" />
+                android:layout_height="80dp"
+                android:layout_gravity="bottom"
+                android:background="#FF4F52"
+                app:itemBackground="@drawable/nav_item_background"
+                app:itemTextAppearanceActive="@style/BottomNavigationViewTextAppearance"
+                app:itemTextAppearanceInactive="@style/BottomNavigationViewTextAppearance"
+                app:menu="@menu/menu"
+                app:itemIconSize="35dp"
+                app:itemIconTint="@color/white"
+                app:itemTextColor="@color/white"
+                tools:ignore="InvalidID,MissingConstraints"/>
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:text="Đăng nhập bằng"
-                android:textColor="#898989"
-                android:textSize="15dp" />
+        </FrameLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="vertical">
-
-                <EditText
-                    android:id="@+id/edtMSSV"
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:inputType="number"
-                    android:textSize="11dp"
-                    android:hint="Mã sinh viên"
-                    android:textColorHint="#C55353"
-                    android:paddingLeft="10dp"
-                    android:background="@drawable/gray_border"
-
-                    />
-
-                <EditText
-                    android:id="@+id/edtPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="15dp"
-                    android:inputType="number"
-                    android:textSize="11dp"
-                    android:hint="Ngày tháng năm sinh ( 30122003 )"
-                    android:textColorHint="#C55353"
-                    android:paddingLeft="10dp"
-                    android:background="@drawable/gray_border"
-                    />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btnLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_marginTop="15dp"
-                    android:text="Đăng Nhập"
-                    android:textSize="12dp"
-                    android:textColor="@color/white"
-                    android:background="@drawable/red_border"
-                    >
-                </androidx.appcompat.widget.AppCompatButton>
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btnMicrosoft"
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/gray_border"
-                    android:drawablePadding="10dp"
-                    android:drawableStart="@drawable/microsoft_logo_1"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:text="Đăng nhập bằng Microsoft 365"
-                    android:textColor="@color/black"
-                    android:textSize="10dp">
-
-                </androidx.appcompat.widget.AppCompatButton>
-
-            </LinearLayout>
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-
-</LinearLayout>
+    </LinearLayout>
