--- a/app/src/main/res/drawable/nav_item_background.xml
+++ b/app/src/main/res/drawable/nav_item_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- State when the item is selected -->
     <item android:state_checked="true">
-        <shape android:shape="rectangle">
+        <shape android:shape="oval">
             <corners android:radius="5dp"/> <!-- Rounded corners -->
         </shape>
     </item>
