--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:backgroundTint="@null"
     android:background="@drawable/background"
     android:gravity="center"
-    tools:context=".LoginActivity">
+    tools:context=".View.LoginActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
