--- a/app/src/main/res/layout/fragment_home_fragement.xml
+++ b/app/src/main/res/layout/fragment_home_fragement.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:orientation="vertical"
-    tools:context=".HomeFragment">
+    tools:context=".View.HomeFragment">
 
 
     <LinearLayout
@@ -20,7 +20,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:paddingLeft="20dp"
             android:weightSum="2"
             android:layout_margin="40dp"
             android:orientation="horizontal">
@@ -57,7 +56,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/rounded_button"
                     android:text="Thông báo"
-
+                    android:layout_gravity="left"
                     android:textColor="@color/white"
                     android:textSize="12dp">
 
@@ -69,7 +68,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:layout_gravity="center"
-                app:cardCornerRadius="20dp">
+                app:cardElevation="0dp"
+               >
 
                 <ImageView
                     android:id="@+id/imgAvatar"
@@ -94,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_margin="20dp">
+        >
 
             <TextView
                 android:id="@+id/textView4"
@@ -104,10 +104,12 @@
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:text="Cấp độ ôn luyện" />
 
             <ListView
                 android:id="@+id/lstLevels"
+                android:listSelector="@color/white"
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
