--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -141,6 +141,7 @@
                     </TextView>
 
                     <TextView
+                        android:id="@+id/txtFeedback"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/cardview_center_item"
