--- a/app/src/main/res/layout/fragment_home_fragement.xml
+++ b/app/src/main/res/layout/fragment_home_fragement.xml
@@ -1,122 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center"
-    android:orientation="vertical"
-    tools:context=".View.HomeFragment">
-
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        tools:context=".View.HomeFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="250dp"
             android:layout_gravity="center"
-            android:weightSum="2"
-            android:layout_margin="40dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:weightSum="2"
+                android:layout_margin="40dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:textSize="20dp"
+                        android:textStyle="bold"
+                        android:text="Chào," />
+
+                    <TextView
+                        android:id="@+id/txtName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:textSize="17dp"
+                        android:textStyle="bold"
+                        android:text="Duy Khang Liêng" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btnNotifications"
+                        android:layout_width="118dp"
+                        android:layout_height="26dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/rounded_button"
+                        android:text="Thông báo"
+                        android:layout_gravity="left"
+                        android:textColor="@color/white"
+                        android:textSize="12dp">
+
+                    </androidx.appcompat.widget.AppCompatButton>
+                </LinearLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    app:cardElevation="0dp">
+
+                    <ImageView
+                        android:id="@+id/imgAvatar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/avatar">
+
+                    </ImageView>
+
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:cardBackgroundColor="#DCDCDC"
+            app:cardCornerRadius="20dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:textSize="20dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"
-                    android:text="Chào," />
-
-                <TextView
-                    android:id="@+id/txtName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:textSize="17dp"
-                    android:textStyle="bold"
-                    android:text="Duy Khang Liêng" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btnNotifications"
-                    android:layout_width="118dp"
-                    android:layout_height="26dp"
+                    android:textColor="@color/black"
+                    android:gravity="center"
                     android:layout_marginTop="10dp"
-                    android:background="@drawable/rounded_button"
-                    android:text="Thông báo"
-                    android:layout_gravity="left"
-                    android:textColor="@color/white"
-                    android:textSize="12dp">
+                    android:text="Cấp độ ôn luyện" />
 
-                </androidx.appcompat.widget.AppCompatButton>
+                <ListView
+                    android:id="@+id/lstLevels"
+                    android:listSelector="@color/white"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:nestedScrollingEnabled="false" />
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                app:cardElevation="0dp"
-               >
+        </androidx.cardview.widget.CardView>
 
-                <ImageView
-                    android:id="@+id/imgAvatar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/avatar">
-
-                </ImageView>
-
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
     </LinearLayout>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        app:cardBackgroundColor="#DCDCDC"
-        app:cardCornerRadius="20dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-        >
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:gravity="center"
-                android:layout_marginTop="10dp"
-                android:text="Cấp độ ôn luyện" />
-
-            <ListView
-                android:id="@+id/lstLevels"
-                android:listSelector="@color/white"
-                android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-
-</LinearLayout>
+</ScrollView>
