--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -246,12 +246,12 @@
         <ListView
             android:id="@+id/lstLeaderboard"
             android:layout_width="match_parent"
-            android:layout_height="303dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="70dp" />
+            android:layout_marginBottom="100dp" />
     </LinearLayout>
 
 
