--- a/app/src/main/res/layout/fragment_arena.xml
+++ b/app/src/main/res/layout/fragment_arena.xml
@@ -9,26 +9,25 @@
     android:background="#FFE5E5"
     tools:context=".View.ArenaFragment">
 
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical"
-        android:layout_marginBottom="100dp"
+        android:layout_marginTop="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="60dp">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:padding="8dp">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
                 app:cardBackgroundColor="@android:color/white"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="4dp"
@@ -45,7 +44,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:scaleType="centerCrop"
-                        tools:src="@drawable/imgleaderboard" />
+                        android:src="@drawable/imgleaderboard" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -63,7 +62,7 @@
                             android:textColor="@android:color/white"
                             android:textSize="20dp"
                             android:textStyle="bold"
-                            tools:text="Bảng xếp hạng" />
+                            android:text="Bảng xếp hạng" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -80,16 +79,14 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
             android:padding="8dp">
-
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                app:cardBackgroundColor="@android:color/white"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="4dp"
-                app:cardBackgroundColor="@android:color/white"
                 app:cardPreventCornerOverlap="false"
                 app:cardUseCompatPadding="true">
 
@@ -103,32 +100,31 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:scaleType="centerCrop"
-                        tools:src="@drawable/imgarena" />
+                        android:src="@drawable/imgarena" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:background="#FF6C6C">
+                        android:background="#FF6C6C"
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/txtBattle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textSize="20dp"
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold"
+                            android:ellipsize="end"
                             android:gravity="center"
                             android:maxLines="2"
-                            android:ellipsize="end"
-                            tools:text="Thi đấu"
-                            />
+                            android:textColor="@android:color/white"
+                            android:textSize="20dp"
+                            android:textStyle="bold"
+                            android:text="Thi đấu" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:gravity="center_vertical">
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
 
                         </LinearLayout>
                     </LinearLayout>
@@ -136,4 +132,5 @@
             </androidx.cardview.widget.CardView>
         </FrameLayout>
     </LinearLayout>
+
 </LinearLayout>
