navigate to leaderboard

--- a/app/src/main/res/layout/fragment_arena.xml
+++ b/app/src/main/res/layout/fragment_arena.xml
@@ -36,6 +36,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:id="@+id/lnrRanking"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
@@ -92,6 +93,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:id="@+id/lnrCompetition"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
